--- a/test.html
+++ b/test.html
@@ -223,6 +223,7 @@
         <option value="Tickets beantworten">Tickets beantworten</option>
         <option value="Letzte Besprechung dokumentieren">Letzte Besprechung dokumentieren</option>
         <option value="Neues Mitglied geprüft">Neues Mitglied geprüft</option>
+        <option value="test">test beantworten</option>
       </select>
       <input type="text" id="task-comment" placeholder="Kommentar (optional)" />
       <button onclick="abschliessen()">✅ Aufgabe abschließen</button>
